[gd_scene load_steps=22 format=3 uid="uid://ckjd4al0n7snv"]

[ext_resource type="Texture2D" uid="uid://dtim1o3446cn" path="res://assets/sprites/characters.png" id="1_8afob"]
[ext_resource type="Script" uid="uid://djefui0ud08ix" path="res://scripts/player.gd" id="1_dovo2"]
[ext_resource type="Shader" uid="uid://cg60x1urggnub" path="res://shader/hit_flash.gdshader" id="2_lvxji"]
[ext_resource type="PackedScene" uid="uid://cimksycqkx7cd" path="res://scenes/entity/sword.tscn" id="4_lvxji"]
[ext_resource type="PackedScene" uid="uid://ceygykysgliy7" path="res://scenes/ui/health_bar.tscn" id="5_0owmy"]
[ext_resource type="PackedScene" uid="uid://de0fi336wwjlj" path="res://scenes/ui/inventory_ui.tscn" id="5_p47bc"]
[ext_resource type="Texture2D" uid="uid://b505or0e1jjpi" path="res://assets/ui/ui.png" id="6_75vfm"]
[ext_resource type="PackedScene" uid="uid://dfyt2gwxrlywa" path="res://scenes/ui/dialog_ui.tscn" id="8_qek5x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p47bc"]
shader = ExtResource("2_lvxji")
shader_parameter/hit_flash_color = Color(1, 1, 1, 1)
shader_parameter/hit_flash_on = false

[sub_resource type="AtlasTexture" id="AtlasTexture_dovo2"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmlin"]
atlas = ExtResource("1_8afob")
region = Rect2(16, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kbk7"]
atlas = ExtResource("1_8afob")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqjuk"]
atlas = ExtResource("1_8afob")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4h5g"]
atlas = ExtResource("1_8afob")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiqp4"]
atlas = ExtResource("1_8afob")
region = Rect2(48, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvfru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dovo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmlin")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kbk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqjuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4h5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiqp4")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_lvxji"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/hit_flash_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gmlin"]
resource_name = "hit"
length = 2.5
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/hit_flash_on")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lvxji"]
_data = {
&"RESET": SubResource("Animation_lvxji"),
&"hit": SubResource("Animation_gmlin")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gmlin"]
radius = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("6_75vfm")
region = Rect2(16, 16, 224, 160)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
process_mode = 3
collision_layer = 2
collision_mask = 2
script = ExtResource("1_dovo2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_p47bc")
sprite_frames = SubResource("SpriteFrames_hvfru")
animation = &"idle"
frame_progress = 0.209131
offset = Vector2(0, -8)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_lvxji")
}

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_right = 1600
limit_bottom = 1600
rotation_smoothing_speed = 25.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gmlin")

[node name="Weapon" type="Node2D" parent="."]

[node name="Sword" parent="Weapon" instance=ExtResource("4_lvxji")]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 0

[node name="HeatlhLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Coins" type="Label" parent="HUD"]
offset_left = 246.0
offset_right = 340.0
offset_bottom = 23.0
size_flags_horizontal = 0
text = "Tiền: 0 đồng"

[node name="HealthBar" parent="HUD" instance=ExtResource("5_0owmy")]
visible = false

[node name="InventoryUI" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="InventoryUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -80.0
offset_right = 112.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_75vfm")
stretch_mode = 2

[node name="InventoryUI" parent="InventoryUI" instance=ExtResource("5_p47bc")]

[node name="InteracUI" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="InteracUI"]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="InteracUI/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -7.5
offset_right = 33.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 9
text = "Bấm E để nhặt"

[node name="DialogUI" type="CanvasLayer" parent="."]
visible = false

[node name="DialogUI" parent="DialogUI" instance=ExtResource("8_qek5x")]

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 15)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
